--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,21 @@ button.scroll_down:before {
   animation: scroll_down_btn-animation 2s infinite;
   box-sizing: border-box; }
 
+@media screen and (max-width: 640px) {
+  button.scroll_down {
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    height: 50px;
+    width: 30px;
+    bottom: 150px;
+    background-color: transparent;
+    border: 2px solid black;
+    border-radius: 20px;
+    cursor: pointer;
+    outline: none; } }
 @keyframes scroll_down_btn-animation {
   0% {
     transform: translate(0, 0);
