--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,6 +2,8 @@
 @import "_animation";
 @import "_button";
 @import "_tiles";
-@import "_loading";
+/*@import "_loading"; */
 @import "_report";
 @import "_title";
+@import "_prism";
+@import "_navbar";
