--- a/css/style.css
+++ b/css/style.css
@@ -156,54 +156,7 @@ button.scroll_down:before {
   width: 100px;
   height: 100px; }
 
-#overlayer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1;
-  background: #4a4a4a; }
-
-.loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: fixed;
-  z-index: 3;
-  border: 4px solid #Fff;
-  top: 50%;
-  left: 50%;
-  animation: loader 2s infinite ease;
-  text-align: center; }
-
-.loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in; }
-
-@keyframes loader {
-  0% {
-    transform: rotate(0deg); }
-  25% {
-    transform: rotate(180deg); }
-  50% {
-    transform: rotate(180deg); }
-  75% {
-    transform: rotate(360deg); }
-  100% {
-    transform: rotate(360deg); } }
-@keyframes loader-inner {
-  0% {
-    height: 0%; }
-  25% {
-    height: 0%; }
-  50% {
-    height: 100%; }
-  75% {
-    height: 100%; }
-  100% {
-    height: 0%; } }
+/*@import "_loading"; */
 body {
   background: #f2f2f2;
   color: #444444; }
@@ -273,5 +226,148 @@ h1, h2, strong {
 #main_title a:after {
   border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #d66c54 #54afd6;
   box-shadow: 25px 25px 25px rgba(46, 46, 49, 0.8); }
+
+/* PrismJS 1.16.0
+https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+python */
+/**
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
+ * @author Lea Verou
+ */
+code[class*="language-"],
+pre[class*="language-"] {
+  color: black;
+  background: none;
+  text-shadow: 0 1px white;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 1em;
+  text-align: left;
+  white-space: pre;
+  word-spacing: normal;
+  word-break: normal;
+  word-wrap: normal;
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-hyphens: none;
+  -moz-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none; }
+
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc; }
+
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #b3d4fc; }
+
+@media print {
+  code[class*="language-"],
+  pre[class*="language-"] {
+    text-shadow: none; } }
+/* Code blocks */
+pre[class*="language-"] {
+  padding: 1em;
+  margin: .5em 0;
+  overflow: auto; }
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #f5f2f0; }
+
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+  padding: .1em;
+  border-radius: .3em;
+  white-space: normal; }
+
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: slategray; }
+
+.token.punctuation {
+  color: #999; }
+
+.namespace {
+  opacity: .7; }
+
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #905; }
+
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #690; }
+
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string {
+  color: #9a6e3a;
+  background: rgba(255, 255, 255, 0.5); }
+
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+  color: #07a; }
+
+.token.function,
+.token.class-name {
+  color: #DD4A68; }
+
+.token.regex,
+.token.important,
+.token.variable {
+  color: #e90; }
+
+.token.important,
+.token.bold {
+  font-weight: bold; }
+
+.token.italic {
+  font-style: italic; }
+
+.token.entity {
+  cursor: help; }
+
+.toc-wrapper {
+  position: relative;
+  margin-top: 42px; }
+
+.pinned {
+  position: fixed !important; }
+
+#toc_container {
+  background: #f9f9f9 none repeat scroll 0 0;
+  border: 1px solid #aaa;
+  display: table;
+  font-size: 95%;
+  margin-bottom: 1em;
+  padding: 20px;
+  width: auto;
+  position: fixed; }
+
+.toc_title {
+  font-weight: 700;
+  text-align: center; }
+
+#toc_container li, #toc_container ul, #toc_container ul li {
+  list-style: outside none none !important; }
 
 /*# sourceMappingURL=style.css.map */
